k8s-manifests/app/blue-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green
  namespace: default
spec:
  selector:
    app: nodejs-app
    version: blue   # or green — depends which version you want to route
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
