k8s-manifests/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-blue
  namespace: default
spec:
  selector:
    app: nodejs-app
    version: blue
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-green
  namespace: default
spec:
  selector:
    app: nodejs-app
    version: green
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
